; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-s3c2410.c_s3c24xx_i2c_calcdivisor.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-s3c2410.c_s3c24xx_i2c_calcdivisor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32, i32*, i32*)* @s3c24xx_i2c_calcdivisor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s3c24xx_i2c_calcdivisor(i64 %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = zext i32 %12 to i64
  %14 = udiv i64 %11, %13
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %9, align 4
  %17 = icmp ugt i32 %16, 256
  br i1 %17, label %18, label %19

18:                                               ; preds = %4
  store i32 512, i32* %10, align 4
  br label %20

19:                                               ; preds = %4
  store i32 16, i32* %10, align 4
  br label %20

20:                                               ; preds = %19, %18
  %21 = load i32, i32* %10, align 4
  %22 = sub i32 %21, 1
  %23 = load i32, i32* %9, align 4
  %24 = add i32 %23, %22
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* %9, align 4
  %27 = udiv i32 %26, %25
  store i32 %27, i32* %9, align 4
  %28 = load i32, i32* %9, align 4
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %20
  store i32 1, i32* %9, align 4
  br label %31

31:                                               ; preds = %30, %20
  %32 = load i32, i32* %9, align 4
  %33 = icmp ugt i32 %32, 17
  br i1 %33, label %34, label %35

34:                                               ; preds = %31
  store i32 17, i32* %9, align 4
  br label %35

35:                                               ; preds = %34, %31
  %36 = load i32, i32* %9, align 4
  %37 = load i32*, i32** %8, align 8
  store i32 %36, i32* %37, align 4
  %38 = load i32, i32* %10, align 4
  %39 = load i32*, i32** %7, align 8
  store i32 %38, i32* %39, align 4
  %40 = load i64, i64* %5, align 8
  %41 = load i32, i32* %9, align 4
  %42 = load i32, i32* %10, align 4
  %43 = mul i32 %41, %42
  %44 = zext i32 %43 to i64
  %45 = udiv i64 %40, %44
  %46 = trunc i64 %45 to i32
  ret i32 %46
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
